homelab/talos/external-mdns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-mdns
  namespace: default
spec:
  selector:
    matchLabels:
      app: external-mdns
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-mdns
    spec:
      containers:
      - args:
        - -source=ingress
        - -source=service
        image: blakec/external-mdns:latest
        name: external-mdns
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      hostNetwork: true
      securityContext:
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      serviceAccountName: external-mdns
