homelab/talos/mosquitto.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mqtt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      securityContext:
        fsGroup: 1883
        runAsUser: 1883
        runAsGroup: 1883
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:2.0.18
        ports:
        - containerPort: 1883
        volumeMounts:
        - name: config
          mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
        - name: data
          mountPath: /mosquitto/data
      volumes:
      - name: config
        configMap:
          name: mosquitto-config
      - name: data
        persistentVolumeClaim:
          claimName: mosquitto-data
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mqtt
  annotations:
    external-mdns.blakecovarrubias.com/hostnames: mqtt, broker
spec:
  type: LoadBalancer
  ports:
  - port: 1883
    targetPort: 1883
    protocol: TCP
    name: mqtt
  selector:
    app: mosquitto
